Socket dispatcher/handler. JS socket wrapper

--- a/src/Web/Bundle/UserBundle/Resources/views/test.html.twig
+++ b/src/Web/Bundle/UserBundle/Resources/views/test.html.twig
@@ -32,8 +32,9 @@
 
 </div>
 
-<script src='{{ asset('js/adapter.js') }}'></script>
-<script src='{{ asset('js/rtc.js') }}'></script>
+<script src='{{ asset('js/rtc/adapter.js') }}'></script>
+<script src='{{ asset('js/rtc/socket.js') }}'></script>
+<script src='{{ asset('js/rtc/rtc.js') }}'></script>
 
 </body>
 </html>
