--- a/src/Web/Bundle/UserBundle/Resources/views/Rtc/Conference.html.twig
+++ b/src/Web/Bundle/UserBundle/Resources/views/Rtc/Conference.html.twig
@@ -32,6 +32,10 @@
     </div>
     <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
         <h4>Wiadomości</h4>
+        <div class="chat">
+
+        </div>
+        <input type="text" id="message"><button id="send-message">Send</button>
     </div>
 
     <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
@@ -55,4 +59,5 @@
     <script type="text/javascript" src='{{ asset('js/rtc/preview.js') }}'></script>
     <script type="text/javascript" src='{{ asset('js/rtc/peer.js') }}'></script>
     <script type="text/javascript" src='{{ asset('js/rtc/rtc.js') }}'></script>
+    <script type="text/javascript" src='{{ asset('js/rtc/chat.js') }}'></script>
 {% endblock %}
