--- a/app/Resources/views/Base.html.twig
+++ b/app/Resources/views/Base.html.twig
@@ -29,7 +29,7 @@
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
             <script type="text/javascript" src="{{ asset('js/bootstrap.js') }}"></script>
-            {#<script type="text/javascript" src="{{ asset('js/custom.js') }}"></script>#}
+            <script type="text/javascript" src="{{ asset('js/default.js') }}"></script>
         {% endblock %}
     </body>
 </html>
