--- a/src/Web/Bundle/UserBundle/Resources/views/Layout.html.twig
+++ b/src/Web/Bundle/UserBundle/Resources/views/Layout.html.twig
@@ -14,8 +14,7 @@
     <div class="container">
         <div class="blog-header">
             <h1 class="blog-title">WebRTC</h1>
-
-            <p class="lead blog-description">Michał jest pedałem i nie zmieni tego opisu.</p>
+            <p class="lead blog-description">Praca magisterska Michała Drabińskiego.</p>
         </div>
 
         <div class="row">
