--- a/web/css/style.css
+++ b/web/css/style.css
@@ -180,7 +180,6 @@ h6, .h6 {
     display: inline-block;
     float: left;
     margin: 5px;
-    height: 74px;
     position: relative;
 }
 .cameras li .info {
@@ -202,7 +201,7 @@ h6, .h6 {
 }
 .cameras video {
     width: 140px;
-    background: red;
+    background: #000000;
 }
 
 #main-video {
@@ -210,6 +209,14 @@ h6, .h6 {
     background: #000000;
     margin: 1%;
 }
+
+#main-video.fullscreen{
+    position:absolute;
+    left:0; right:0; top:0; bottom:0;
+    width:100%; height:100%;
+    overflow:hidden;
+}
+
 #fullscreen {
     display: none;
     position: absolute;
@@ -235,4 +242,9 @@ h6, .h6 {
 .glyphicon {
     font-size: 20px;
 }
-
+.start-conference {
+    float: right;
+    position: absolute;
+    right: 0;
+    top: 43px;
+}
