--- a/src/Web/Bundle/UserBundle/Resources/views/Rtc/Conference.html.twig
+++ b/src/Web/Bundle/UserBundle/Resources/views/Rtc/Conference.html.twig
@@ -50,6 +50,7 @@
         var settings = {
             room: "{{ room.token }}",
             user: "{{ app.user.id }}",
+            username: "{{ app.user.username }}",
             url: "{{ app.request.host }}",
             port: "8080"
         };
